--- a/views/login.pug
+++ b/views/login.pug
@@ -1,3 +1,5 @@
+h1 CONNECTE-TOI et viens découvrir les nouveaux avis
+
 form(method="post")
     input(type="email", name="username", placeholder="email")
     input(type="password", name="password", placeholder="password")
