--- a/views/inscription.pug
+++ b/views/inscription.pug
@@ -1,3 +1,5 @@
+h1 INSCRIVEZ-VOUS
+
 form(method="post")
     input(type="email", name="username", placeholder="email")
     input(type="password", name="password", placeholder="password")
